# tiny-aya-translate

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  streamlit_app.py  test_streamlit_app.py  test_streamlit_ui.py
.claude/: settings.json
.github/workflows/: ci.yml
.streamlit/: config.toml
