[project]
name = "tiny-aya-translate"
version = "0.8.0"
description = "Streamlit application for translation using Cohere Labs Tiny Aya Global on Apple Silicon with MLX."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mlx-lm>=0.31.3",
    "streamlit>=1.58.0",
]

[project.urls]
Repository = "https://github.com/darylalim/tiny-aya-translate"

[project.optional-dependencies]
docs = [
    "docling>=2.103.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "ruff>=0.15.18",
    "ty>=0.0.51",
]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["."]
